--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- About the Campaign -->
              <section class="w-11/12 mx-auto mt-20">
                 <h1 class="text-center text-2xl sm:text-3xl font-semibold">About the Campaign</h1>
-                <div class="grid sm:grid-cols-2 items-center mt-10">
+                <div class="grid sm:grid-cols-2 items-center my-10">
                     <div>
                         <img src="assets/about.png" class="" alt="">
                     </div>
@@ -100,15 +100,15 @@
                 <div class="w-11/12 mx-auto p-12">
                     <h1 class="text-center my-7 text-2xl font-semibold">Our Impact</h1>
                     <div class="grid sm:grid-cols-3 gap-x-9 gap-y-3">
-                        <div class="bg-white text-center p-5 rounded-md">
+                        <div class="bg-white text-center p-5 rounded-md hover:bg-green-100 duration-150">
                             <p class="text-green-700 text-2xl font-bold">500K+</p>
                             <P>Trees Planted</P>
                         </div>
-                        <div class="bg-white text-center p-5 rounded-md">
+                        <div class="bg-white text-center p-5 rounded-md hover:bg-green-100 duration-150">
                             <p class="text-green-700 text-2xl font-bold">120+</p>
                             <P>Communities Involved</P>
                         </div>
-                        <div class="bg-white text-center p-5 rounded-md">
+                        <div class="bg-white text-center p-5 rounded-md hover:bg-green-100 duration-150">
                             <p class="text-green-700 text-2xl font-bold">30+</p>
                             <P>Countries Reached</P> 
                         </div>
@@ -126,9 +126,9 @@
                             <input type="email" class="bg-white rounded p-2 text-black border-none outline-none" placeholder="Your Email Address" name="" id="">
                             <select name="" class="bg-white rounded p-2 text-black border-none outline-none" id="" >
                                 <option value="" hidden>Number of Trees</option>
-                                <option value="">1</option>
-                                <option value="">2</option>
-                                <option value="">3</option>
+                                <option value="">1 Tree 5$</option>
+                                <option value="">5 Tree 25$</option>
+                                <option value="">10 Tree 50$</option>
                             </select>
                             <button class="btn btn-sm btn-warning rounded-full">Donate Now</button>
 
