--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                     </div>
                     <div class="col-span-8 sm:gap-4 gap-y-6 grid sm:grid-cols-3 mb-10 plantsCards">
 
-                        <span class="loading loading-dots loading-xs"></span>
+                        <div class="flex justify-center col-span-3">
+                            <span class="loading loading-dots loading-xs text-center"></span>
+                        </div>
+                        
                         
                     </div>
                     <div class="col-span-2 bg-white rounded p-2 h-150 overflow-y-auto">
